--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT=3000
-DB_URL=host=<HOST> user=<user> password=<password> dbname=<dbname> port=5432 sslmode=disable
+DB_URL=host=arjuna.db.elephantsql.com user=hkcvsced password=oEHB4yXtI4J7cWveGE4ctA_da2iSrWgr dbname=hkcvsced port=5432 sslmode=disable
+# This is my cloud database that I use. You can use this to connect to my db. I will not close the connection.
